Fix FE console errors

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -353,7 +353,7 @@
       letter-spacing: 0em
       text-align: left
 
-    label
+    p
       font-size: 14px
       font-weight: 400
       line-height: 11px
@@ -361,7 +361,7 @@
       text-align: left
       margin-bottom: 0
 
-    label.goal-label
+    p.goal-label
       font-size: 21px
       line-height: 16px
       letter-spacing: 0em
