--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -2,6 +2,6 @@
   h1 #{@advertiser.name}
   .dropdown-menu-button
     = react_component("LinkDropdownMenu",
-            props: {icon: "fas fa-cog gear-icon", items: [{text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
+            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
             prerender: false)
   = react_component("CampaignIndexComponent", props: {campaigns: @campaigns, link:"/advertisers/#{@advertiser.id}/campaigns/"}, prerender: false)
