--- a/app/views/advertisers/edit.slim
+++ b/app/views/advertisers/edit.slim
@@ -2,7 +2,7 @@
   h1 Edit Advertiser
   .dropdown-menu-button
     = react_component("LinkDropdownMenu",
-            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
+            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon: "fas fa-pen", link: "/users/#{current_user.id}/edit"}]},
             prerender: false)
   .row
     .col-12
