--- a/app/views/campaigns/show.slim
+++ b/app/views/campaigns/show.slim
@@ -16,7 +16,7 @@
             props: {text: 'Back to campaigns', icon: '', buttonClass: 'btn-secondary-v2 btn-campaign-back', link: @button_links[:back]},
             prerender: false)
     = react_component("LinkDropdownMenu",
-            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon: "fas fa-pen", link: "/agencies/#{current_user.company.id}/users/#{current_user.id}/edit"}]},
+            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon: "fas fa-pen", link: "/users/#{current_user.id}/edit"}]},
             prerender: false)
 
   = react_component("CampaignDetailsComponent",
