--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -24,7 +24,7 @@ nav#sidebar
     li.clearfix
       .icon-container
         i.fas.fa-address-card
-      = link_to 'Customer Intelligence', 'https://smartpixl.com/Login/Login/Login', target: :_blank
+      = link_to 'Customer Recognition', "https://www.fullcontact.com/", target: :_blank
     li.clearfix
       .icon-container
         i.fas.fa-chart-pie
