Add Annual Revenue to advertiser form and modify filter

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -427,6 +427,23 @@
         input
           height: 36px
 
+  .annual-revenue-filter .selectV2__control
+    background: white
+    border-color: #ced4da
+
+    .selectV2__value-container
+
+      .selectV2__placeholder
+        top: 55%
+
+      .selectV2__single-value
+        top: 55%
+
+      .selectV2__input
+        padding-top: 0
+        margin-bottom: 0
+
+
   .multiSelectV2__control--is-focused
     border-color: #80bdff
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25)
@@ -487,3 +504,6 @@
       box-sizing: border-box
       display: inline-flex
       vertical-align: top
+
+.no-results-message
+  padding-left: 15px
