--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -6,7 +6,7 @@ nav#sidebar
       .icon-container
         i.fas.fa-home
       - if current_user.company_type == 'Advertiser'
-        = link_to "Dashboard", advertiser_campaigns_path(advertiser_id: current_user.company.id)
+        = link_to "Dashboard", vendor_campaigns_path(vendor_id: current_user.company.id)
       - else
         = link_to "Dashboard", dashboard_index_path
     li.clearfix class=(controller_name == 'campaigns' && controller.action_name == 'new' ? 'active' : '')
