--- a/app/views/devise/passwords/edit.slim
+++ b/app/views/devise/passwords/edit.slim
@@ -1,25 +1,19 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+.container-fluid.h-100
+  .row.h-100.d-flex.align-items-center
+    .col-4
+    .col-4
+      .card
+        .card-body
+          = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+            = render "devise/shared/error_messages", resource: resource
+            = f.hidden_field :reset_password_token
+            .col.d-flex.flex-column.align-items-center
+              = image_tag "signmark.svg", style: 'width: 72px', class: 'mb-5'
+            .col.d-flex.flex-column.align-items-center
+              h1.h4.mb-3.font-weight-normal Change your password
+            .form-group
+              = f.input_field :password, autofocus: true, placeholder: 'New Password', class: 'form-control mb-2'
+              = f.input_field :password_confirmation, placeholder: 'Confirm New Password', class: 'form-control mb-2'
+            .col.d-flex.flex-column.align-items-center
+              = f.submit "Update password", class: 'btn btn-primary-v2 btn-sm'
+              = render "devise/shared/links"
