added geo_fence, footfall_analysis additional fields to campaign

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -116,6 +116,10 @@
       display: inline-block
       width: 92%
 
+    .input-v2.textarea
+      height: 120px
+      padding: revert
+      
     .input-v2-prepend
       float: left
       width: 8%
