--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -5,3 +5,4 @@
 @import 'base/navigation'
 @import 'base/bootstrap_overrides'
 @import 'base/version2'
+@import 'react-checkbox-tree/lib/react-checkbox-tree'
