Fixing filter box size

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -430,14 +430,14 @@
   .annual-revenue-filter .selectV2__control
     background: white
     border-color: #ced4da
-
+    height: 50px
     .selectV2__value-container
 
       .selectV2__placeholder
-        top: 55%
+        top: 50%
 
       .selectV2__single-value
-        top: 55%
+        top: 50%
 
       .selectV2__input
         padding-top: 0
