Added new links to the side nav

--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -23,6 +23,18 @@ nav#sidebar
       = link_to "Demand Side Platforms", platforms_path
     li.clearfix
       .icon-container
+        i.fas.fa-server
+      = link_to "Ad Server", "https://campaignmanager.google.com/", target: :_blank
+    li.clearfix
+      .icon-container
+        i.fas.fa-user-shield
+      = link_to "Brand Safety", "https://app.peer39.com/", target: :_blank
+    li.clearfix
+      .icon-container
+        i.fas.fa-search-location
+      = link_to "Location Targeting", "https://accounts.factual.com/", target: :_blank
+    li.clearfix
+      .icon-container
         i.fas.fa-address-card
       = link_to 'Customer Recognition', "https://platform.fullcontact.com/developers/api-keys", target: :_blank
     li.clearfix
