--- a/app/views/advertisers/index.slim
+++ b/app/views/advertisers/index.slim
@@ -2,7 +2,19 @@
   h1 #{@agency.name}
   .dropdown-menu-button
     = react_component("LinkDropdownMenu",
-            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon:"fas fa-pen", link:"/users/#{current_user.id}/edit"}]},
-            prerender: false)
+                      props: {\
+                        icon: "fas fa-cog gear-icon",
+                        items: [{\
+                          id: "edit",
+                          text: "Edit Profile",
+                          icon:"fas fa-pen",
+                          link:"/users/#{current_user.id}/edit"}]},
+                      prerender: false)
 
-= react_component("AgencyDashboardComponent", props: {agency: @agency, advertisers: @advertisers_with_campaigns, token: form_authenticity_token, annual_revenue_options: annual_revenue_options}, prerender: false)
+= react_component("AgencyDashboardComponent",
+                  props: {\
+                    agency: @agency,
+                    advertisers: @advertisers.as_json(include: :campaigns),
+                    token: form_authenticity_token,
+                    annual_revenue_options: annual_revenue_options},
+                  prerender: false)
