--- a/app/views/campaigns/new.slim
+++ b/app/views/campaigns/new.slim
@@ -10,8 +10,8 @@
         .card-body
           = react_component("CampaignForm",
                   props: {campaign: @campaign,
-                          advertiser: @advertiser,
-                          new: true,
+                          save_campaign_url: "/vendors/#{@advertiser.id}/campaigns",
+                          save_campaign_method: "POST",
                           token: form_authenticity_token,
                           options: options,
                           data_providers: data_providers_nested,
