--- a/app/views/campaigns/edit.slim
+++ b/app/views/campaigns/edit.slim
@@ -10,6 +10,7 @@
         .card-body
           = react_component("CampaignForm",
                   props: {campaign: @campaign,
+                          hide_advertiser: current_user.advertiser_user?,
                           save_campaign_url: "/campaigns/#{@campaign.id}",
                           save_campaign_method: 'PUT',
                           token: form_authenticity_token,
