--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -12,7 +12,7 @@ nav#sidebar
     li.clearfix class=(controller_name == 'campaigns' && controller.action_name == 'new' ? 'active' : '')
       .icon-container
         i.fas.fa-crosshairs
-      = link_to "Campaign Planner", campaign_planner_path
+      = link_to "Campaign Planner", new_campaign_path
     li.clearfix
       .icon-container
         i.fas.fa-paint-brush
