--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -22,7 +22,7 @@
   font-weight: 400
   font-size: 14px
   height: 50px
-  width: 167px
+  width: 36%
   border-radius: 8px
   padding: 10px 13px 10px 13px
   border: 1px solid $purple-2
@@ -229,7 +229,7 @@
 
   .advertiser-card
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
-    width: 334px
+    min-width: 12em
     border-radius: 8px
 
   .advertiser-card-top
