--- a/app/views/campaigns/edit.slim
+++ b/app/views/campaigns/edit.slim
@@ -8,9 +8,8 @@
         .card-body
           = react_component("CampaignForm",
                   props: {campaign: @campaign,
+                          current_step: @step,
                           hide_advertiser: current_user.advertiser_user?,
-                          save_campaign_url: "/campaigns/#{@campaign.id}",
-                          save_campaign_method: 'PUT',
                           token: form_authenticity_token,
                           options: options,
                           data_providers: data_providers_nested,
