--- a/app/views/campaigns/edit.slim
+++ b/app/views/campaigns/edit.slim
@@ -7,7 +7,7 @@
       .card.card-v2
         .card-body
           = react_component("CampaignForm",
-                  props: {campaign: @campaign,
+                  props: {campaign: @campaign.as_json(include: :objectives),
                           current_step: @step,
                           hide_advertiser: current_user.advertiser_user?,
                           token: form_authenticity_token,
