--- a/app/views/advertisers/index.slim
+++ b/app/views/advertisers/index.slim
@@ -1,15 +1,7 @@
 .agency-dashboard
   h1 #{@agency.name}
   .dropdown-menu-button
-    = react_component("LinkDropdownMenu",
-                      props: {\
-                        icon: "fas fa-cog gear-icon",
-                        items: [{\
-                          id: "edit",
-                          text: "Edit Profile",
-                          icon:"fas fa-pen",
-                          link:"/users/#{current_user.id}/edit"}]},
-                      prerender: false)
+    = render partial: 'shared/user_settings_menu'
 
 = react_component("AgencyDashboardComponent",
                   props: {\
