--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -1,7 +1,5 @@
 .agency-dashboard
   h1 #{@advertiser.name}
   .dropdown-menu-button
-    = react_component("LinkDropdownMenu",
-            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon: "fas fa-pen", link: "/users/#{current_user.id}/edit"}]},
-            prerender: false)
+    = render partial: 'shared/user_settings_menu'
   = react_component("CampaignIndexComponent", props: {campaigns: @campaigns, link:"/vendors/#{@advertiser.id}/campaigns/"}, prerender: false)
