--- a/app/views/campaigns/show.slim
+++ b/app/views/campaigns/show.slim
@@ -15,9 +15,7 @@
     = react_component("LinkButton",
             props: {text: 'Back to campaigns', icon: '', buttonClass: 'btn-secondary-v2 btn-campaign-back', link: @button_links[:back]},
             prerender: false)
-    = react_component("LinkDropdownMenu",
-            props: {icon: "fas fa-cog gear-icon", items: [{id: "edit", text: "Edit Profile", icon: "fas fa-pen", link: "/users/#{current_user.id}/edit"}]},
-            prerender: false)
+    = render partial: 'shared/user_settings_menu'
 
   = react_component("CampaignDetailsComponent",
           props: {campaign: @campaign, website: @website},
