--- a/app/assets/stylesheets/base/layout.sass
+++ b/app/assets/stylesheets/base/layout.sass
@@ -16,6 +16,8 @@ body
     width: calc(100% - 275px)
     padding-top: 30px
     background: #F9F9F9
+    height: 100%
+    overflow: auto
 
 .h5
   font-size: 17px
