Switch customer recognition to liveramp

--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -32,7 +32,7 @@ nav#sidebar
     li.clearfix
       .icon-container
         i.fas.fa-address-card
-      = link_to 'Customer Recognition', "https://platform.fullcontact.com/developers/api-keys", target: :_blank
+      = link_to 'Data Onboarding', "https://sso.liveramp.com/", target: :_blank
     li.clearfix
       .icon-container
         i.fas.fa-chart-pie
