--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -16,7 +16,7 @@ nav#sidebar
     li.clearfix
       .icon-container
         i.fas.fa-paint-brush
-      = link_to 'Creative Automatic', "https://creativeautomatic.com/client/", target: :_blank
+      = link_to 'Creative Studios', creative_studios_path
     li.clearfix class=(controller_name == 'platforms' ? 'active' : '')
       .icon-container
         i.fas.fa-bullhorn
