--- a/app/views/pages/creative_studios.slim
+++ b/app/views/pages/creative_studios.slim
@@ -16,17 +16,18 @@
         .card
           .card-body.text-center.d-flex.align-items-center
             .text-center
-              = image_tag "zeta_logo.png", class: 'zeta-image'
-              .access-btn
-                = link_to "Access AirTori", "https://studio.airtory.com/", class: 'btn btn-primary', target: '_blank'
-
-    .row.bottom-row
-      .col-12.col-md-6
-        .card
-          .card-body.text-center.d-flex.align-items-center
-            .text-center
               = image_tag "spaceback.png", class: 'dv-image'
               .access-btn
                 = link_to "Access Spaceback", "https://app.spaceback.me/", class: 'btn btn-primary', target: '_blank'
+      / .col-12.col-md-6
+      /   .card
+      /     .card-body.text-center.d-flex.align-items-center
+      /       .text-center
+      /         = image_tag "zeta_logo.png", class: 'zeta-image'
+      /         .access-btn
+      /           = link_to "Access AirTori", "https://studio.airtory.com/", class: 'btn btn-primary', target: '_blank'
+
+    / .row.bottom-row
+      
       
 
