Added action_items tab in campaign show view

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -406,6 +406,32 @@
       border-bottom: 4px solid $purple
       font-weight: bold
       color: $gray-2
+    button.btn-primary-v2
+        background: $purple-gradient-linear
+        font-weight: 400
+        font-size: 14px
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
+        height: 50px
+        border-radius: 8px
+        padding: 10px 20px
+        color: white
+        border: none
+
+        .icon
+          font-size: 18px
+          padding-right: 8px
+          vertical-align: middle
+    button.btn-secondary-v2
+        color: $purple-2
+        background: white
+        font-weight: 400
+        font-size: 14px
+        height: 50px
+        width: 36%
+        border-radius: 8px
+        padding: 10px 13px 10px 13px
+        border: 1px solid $purple-2
+
 
 
   .selectV2__control--is-focused
@@ -517,3 +543,6 @@
 
 .error-color
   color: red
+
+#crm_data
+  height: 12px
