added new dsp logos (#103)
* added new dsp logos

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -47,6 +47,7 @@
   padding-left: 47px
   padding-right: 47px
   font-family: Nunito
+  padding-bottom: 20px
 
   .no-advertisers-card
     height: 219px
