--- a/app/assets/stylesheets/demand_side_platforms.sass
+++ b/app/assets/stylesheets/demand_side_platforms.sass
@@ -6,13 +6,9 @@
     height: calc(50vh - 75px)
     .text-center
       width: 100%
-    .dv-image
-      width: 80%
+    .platform-image
       margin: 0 auto
       display: block
-    .zeta-image
-      height: 65px
-      margin: 0 auto 30px
-      display: block
+      height: 70px
     .access-btn
       margin-top: 30px
