--- a/app/views/pages/creative_studios.slim
+++ b/app/views/pages/creative_studios.slim
@@ -8,7 +8,7 @@
         .card
           .card-body.d-flex.align-items-center
             .text-center
-              = image_tag "creative_automatic.png", class: 'dv-image'
+              = image_tag "creative_automatic.png", class: 'platform-image'
               .access-btn
                 = link_to "Access Creative Automatic", "https://creativeautomatic.com/client/", class: 'btn btn-primary', target: '_blank'
 
@@ -16,7 +16,7 @@
         .card
           .card-body.text-center.d-flex.align-items-center
             .text-center
-              = image_tag "spaceback.png", class: 'dv-image'
+              = image_tag "spaceback.png", class: 'platform-image'
               .access-btn
                 = link_to "Access Spaceback", "https://app.spaceback.me/", class: 'btn btn-primary', target: '_blank'
       / .col-12.col-md-6
