--- a/app/views/campaigns/show.slim
+++ b/app/views/campaigns/show.slim
@@ -18,5 +18,5 @@
     = render partial: 'shared/user_settings_menu'
 
   = react_component("CampaignDetailsComponent",
-          props: {campaign: @campaign.as_json(methods: [:flight]), website: @website},
+          props: {campaign: @campaign.as_json(include: {objectives: { methods: :impressions}}, methods: [:flight]), field_mapping: Objectives::DependentFields.mapping },
           prerender: false)
