--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,235 @@
-<p>Hello <%= @resource.email %>!</p>
+<style>
+  A {
+    text-decoration: none
+  }
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+  .content-wrapper {
+    position: absolute;
+    width: 600px;
+    height: 937px;
+    left: 88px;
+    top: 72px;
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+    background: #FFFFFF;
+  }
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+  .logo {
+    position: absolute;
+    left: 42.17%;
+    right: 42.17%;
+    top: 2.99%;
+    bottom: 93.49%;
+  }
+
+  .password-reset-image {
+    position: absolute;
+    width: 209px;
+    height: 215px;
+    left: 195px;
+    top: 107px;
+  }
+
+  .password-reset-title {
+    position: absolute;
+    left: 19%;
+    right: 19%;
+    top: 39.27%;
+    bottom: 48.45%;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 29px;
+    line-height: 39px;
+    /* or 134% */
+
+    text-align: center;
+
+    /* Gray 1 */
+
+    color: #333333;
+  }
+
+  .password-reset-subtitle {
+    position: absolute;
+    left: 15.83%;
+    right: 16%;
+    top: 42.48%;
+    bottom: 46.64%;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 14px;
+    line-height: 20px;
+    /* or 143% */
+
+    text-align: center;
+  }
+
+  .reset-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 30px;
+
+    position: absolute;
+    height: 50px;
+    left: 35.17%;
+    right: 35.17%;
+    top: calc(50% - 50px/2 + 61.5px);
+
+    /* #7C3B94 */
+
+    background: #58107C;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+  }
+
+  .reset-button-text {
+    position: static;
+    width: 128px;
+    height: 15px;
+    left: calc(50% - 128px/2);
+    top: calc(50% - 15px/2);
+
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 106.65%;
+    /* identical to box height, or 15px */
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #FFFFFF;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 10px;
+  }
+
+  .password-reset-bottom-text {
+    position: absolute;
+    left: 15.83%;
+    right: 16%;
+    top: 64.14%;
+    bottom: 24.97%;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    /* or 143% */
+
+    text-align: center;
+
+    /* Gray 1 */
+
+    color: #333333;
+  }
+
+  .footer-wrapper {
+    position: absolute;
+    width: 600px;
+    height: 199px;
+    left: 0px;
+    bottom: 0px;
+  }
+
+  .footer-background {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+
+    /* Gradient Button */
+
+    background: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%);
+  }
+
+  .footer-logo {
+    position: absolute;
+    left: 43.33%;
+    right: 42.67%;
+    top: 20.1%;
+    bottom: 49.75%;
+
+    background: url(<%= asset_path('v2-email-footer-logo.png') %>);
+  }
+
+  .social-wrapper {
+    position: absolute;
+    left: 41.33%;
+    right: 41.5%;
+    top: 65.83%;
+    bottom: 23.12%;
+  }
+
+  .linked-in-icon {
+    position: absolute;
+    left: 2%;
+    right: 55.33%;
+    top: 65.83%;
+    bottom: 23.64%;
+  }
+
+  .instagram-icon {
+    position: absolute;
+    left: 40%;
+    right: 48.17%;
+    top: 65.83%;
+    bottom: 23.12%;
+  }
+
+  .twitter-icon {
+    position: absolute;
+    left: 80%;
+    right: 41.5%;
+    top: 65.83%;
+    bottom: 23.64%;
+  }
+</style>
+
+<div class="content-wrapper">
+  <div class="logo">
+    <img src="<%= asset_path('password-reset-logo.png') %>">
+  </div>
+  <div class="password-reset-image">
+    <img src="<%= asset_path('password-reset-image.png') %>">
+  </div>
+  <div class="password-reset-title">
+    Password reset request
+  </div>
+  <p class="password-reset-subtitle">
+    A request to change your password has been made.<br>
+    To reset your password, click the button below.
+  </p>
+  <a class="reset-button" href="<%= edit_password_url(@resource, reset_password_token: @token) %>">
+    <span class="reset-button-text">Reset my password</span>
+  </a>
+  <p class="password-reset-bottom-text">
+    If you did not request this password reset request, please ignore this request and contact <a style="text-decoration: underline;" href="mailto:support@theversion2.com">support@theversion2.com</a>
+  </p>
+  <div class="footer-wrapper">
+    <div class="footer-background">
+    </div>
+
+    <div class="footer-logo">
+    </div>
+
+    <div class="social-wrapper">
+      <a class="linked-in-icon"><img src="<%= asset_path('linked-in.png') %>"></a>
+      <a class="instagram-icon"><img src="<%= asset_path('instagram.png') %>"></a>
+      <a class="twitter-icon"><img src="<%= asset_path('twitter.png') %>"></a>
+    </div>
+  </div>
+</div>
