Adding airtory image

--- a/app/views/pages/creative_studios.slim
+++ b/app/views/pages/creative_studios.slim
@@ -12,20 +12,20 @@
               .access-btn
                 = link_to "Access Creative Automatic", "https://creativeautomatic.com/client/", class: 'btn btn-primary', target: '_blank'
 
-      .col-12.col-md-6
-        .card
-          .card-body.text-center.d-flex.align-items-center
-            .text-center
-              = image_tag "spaceback.png", class: 'platform-image'
-              .access-btn
-                = link_to "Access Spaceback", "https://app.spaceback.me/", class: 'btn btn-primary', target: '_blank'
       / .col-12.col-md-6
       /   .card
       /     .card-body.text-center.d-flex.align-items-center
       /       .text-center
-      /         = image_tag "zeta_logo.png", class: 'zeta-image'
+      /         = image_tag "spaceback.png", class: 'platform-image'
       /         .access-btn
-      /           = link_to "Access AirTori", "https://studio.airtory.com/", class: 'btn btn-primary', target: '_blank'
+      /           = link_to "Access Spaceback", "https://app.spaceback.me/", class: 'btn btn-primary', target: '_blank'
+      .col-12.col-md-6
+        .card
+          .card-body.text-center.d-flex.align-items-center
+            .text-center
+              = image_tag "airtory.png", class: 'platform-image'
+              .access-btn
+                = link_to "Access Airtory", "https://studio.airtory.com/", class: 'btn btn-primary', target: '_blank'
 
     / .row.bottom-row
       
